<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">oW</string>
    <string name="locale">en</string>

    <string name="your_location">Your location</string>
    <string name="location_hint">your location here...</string>
    <string name="notification_time">Notification time</string>
    <string name="notification_time_message">Here you can schedule everyday notification about the weather</string>
    <string name="notification_pattern">[DESC] / ○ [TEMP_MAX] / ● [TEMP_MIN]</string>
    <string name="could_not_locate">Your location could not been retrieved. Please add location manually</string>
    <string name="location_saved">Location saved</string>
    <string name="location_unknown">Unknown location</string>
    <string name="no_location">No location</string>
    <string name="not_available">N/A</string>
    <string name="night">Night</string>
    <string name="day">Day</string>

    <string name="auto_define">Auto Define</string>
    <string name="notification">Notification</string>

    <string name="day_indicator">○</string>
    <string name="night_indicator">●</string>

    <string name="set">Set</string>
    <string name="connection_error">Connection error</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="skip_and_continue">Skip and continue ></string>
    <string name="error_screen_message">Please connect to the Internet, including the location or manually enter the
        city, in the application settings.
    </string>
    <string name="select_time">Select time</string>
    <string name="weather_not_updated">Weather was not updated.</string>
    <string name="no_cache">Cached version of forecast has expired. Please check your Internet connection to get latest forecast</string>
    <string name="updating">Updating</string>
    <string name="moon">Moon</string>

    <string name="widget_background_color">Widget Background Color</string>
    <string name="black">Black</string>
    <string name="white">White</string>


    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="sunny">Sunny</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="rain">Rain</string>
    <string name="rain_and_sun">Rain And Sun</string>
    <string name="sleet">Sleet</string>
    <string name="snow">Snow</string>
    <string name="snow_fall">Snow Fall</string>
    <string name="lightning_storm">Lightning Storm</string>
    <string name="light_rain">Light Rain</string>
    <string name="downpour">Downpour</string>
    <string name="fog">Fog</string>
    <string name="hurricane">Hurricane</string>
    <string name="none">none</string>

    <string name="direction_n">N</string>
    <string name="direction_ne">NE</string>
    <string name="direction_e">E</string>
    <string name="direction_se">SE</string>
    <string name="direction_s">S</string>
    <string name="direction_sw">SW</string>
    <string name="direction_w">W</string>
    <string name="direction_nw">NW</string>

    <string name="km_per_hour">kmph</string>
    <string name="miles_per_hour">mph</string>
    <string name="inches">in</string>
    <string name="millimeters">mm</string>



    <!--Time picker-->
    <!-- The title of the time picker dialog. [CHAR LIMIT=NONE] -->
    <string name="time_picker_dialog_title">Set time</string>
    <!-- The title of the date picker dialog. [CHAR LIMIT=NONE] -->
    <string name="date_picker_dialog_title">Set date</string>
    <!-- Name of the button in the date/time picker to accept the date/time change -->
    <string name="date_time_set">Set</string>
    <!-- Name of the button in the date/time picker to accept the date/time change -->
    <string name="date_time_done">Done</string>
    <!-- Preference framework strings. -->
    <string name="cancel">Cancel</string>

    <!-- TimePicker - accessibility support -->
    <!-- Description of the button to increment the TimePicker's minute value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_increment_minute_button">Increment minute</string>
    <!-- Description of the button to decrement the TimePicker's minute value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_decrement_minute_button">Decrement minute</string>
    <!-- Description of the button to increment the TimePicker's hour value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_increment_hour_button">Increment hour</string>
    <!-- Description of the button to decrement the TimePicker's hour value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_decrement_hour_button">Decrement hour</string>
    <!-- Description of the button to increment the TimePicker's set PM value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <!-- Description of the button to decrement the TimePicker's set AM value. [CHAR LIMIT=NONE] -->
    <string name="time_picker_decrement_set_am_button">Set AM</string>

    <!-- @hide DO NOT TRANSLATE. Separator between the hour and minute elements in a TimePicker widget -->
    <string name="time_picker_separator">:</string>
    <string name="retrieving_location">Retrieving location</string>
    <string name="widget_4_1">oW weather widget 4x1</string>
    <string name="widget_4_2">oW widget 4x2</string>
</resources>
