<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:layout_weight="3" android:background="@color/background" android:id="@+id/rootContainer">

    <LinearLayout android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="1"
                  android:gravity="center">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/error_icon"/>
    </LinearLayout>
    <RelativeLayout android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="1"
                    android:orientation="vertical" android:paddingBottom="15dp">
        <TextView android:id="@+id/connection_error_text" android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/connection_error" android:gravity="center_horizontal"
                  android:layout_alignParentTop="true" android:textSize="36sp"/>
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:text="@string/error_screen_message" android:gravity="center_horizontal"
                  android:layout_alignParentBottom="true" android:textSize="17sp" android:paddingLeft="15dp"
                  android:paddingRight="15dp" android:layout_marginBottom="20dp"/>
    </RelativeLayout>

    <RelativeLayout android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="1"
                   android:orientation="vertical" android:paddingTop="15dp" android:paddingBottom="15dp">

        <Button android:id="@+id/btnSettings" android:text="@string/go_to_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_centerHorizontal="true"
                android:background="@drawable/error_button" android:textSize="22sp" android:layout_alignParentTop="true"/>

        <Button android:id="@+id/btnSkip" android:text="@string/skip_and_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" android:gravity="center_horizontal" android:layout_centerHorizontal="true"
                android:textSize="21sp" android:layout_alignParentBottom="true" android:layout_marginBottom="15dp" android:textColor="@android:color/white"/>


    </RelativeLayout>
</LinearLayout>