<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center"
              android:background="@color/background" android:weightSum="10" android:id="@+id/rootContainer">

    <RelativeLayout android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="2"
                    android:gravity="center_horizontal" >
        <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content"
                   android:src="@drawable/header_remainder" android:layout_centerHorizontal="true"
                   android:layout_alignParentTop="true"
                   android:background="@android:color/transparent" >
        </ImageView>

        <TextView android:layout_height="wrap_content" android:textSize="36sp" android:layout_width="fill_parent"
                  android:gravity="center"  android:layout_marginTop="20dp"
                  android:text="@string/notification_time" android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="2"
                    android:gravity="center">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content" android:gravity="center_vertical"
                      android:orientation="horizontal" android:weightSum="5" android:layout_marginTop="40dp"
                      android:layout_alignParentBottom="true">

            <ImageView android:layout_height="40dp" android:layout_width="0dp" android:layout_weight="1"
                       android:src="@drawable/reminder_icon" android:scaleType="centerInside"
                       android:layout_gravity="start|center_vertical"/>

            <TextView android:id="@+id/tvNotificationMsg" android:layout_height="wrap_content"
                      android:layout_width="0dp"
                      android:layout_weight="4" android:text="@string/notification_time_message"
                      style="@style/TextView" android:padding="5dp" android:textSize="16sp"
                      android:lineSpacingExtra="-3dp"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout android:layout_height="0dp" android:layout_width="fill_parent" android:layout_weight="6"
                    android:gravity="center_horizontal">
        <com.massivekinetics.ow.views.timepicker.TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>

        <Button android:id="@+id/btnSet" android:text="@string/set"
                android:layout_width="200dp"
                android:layout_height="50dp" android:layout_centerHorizontal="true"
                android:background="@drawable/blue_button" android:layout_alignParentBottom="true"
                android:layout_marginBottom="45dp"
                android:textSize="22sp"/>
    </RelativeLayout>


</LinearLayout>